# npfrmwk

./: README.md
NPAPI/: CMakeLists.txt  cmake(VS2010).bat
NPAPI/frmwk/: npfrmwk.h
NPAPI/include/: mozilla-config.h  npruntime.h
NPAPI/npfdemo/: CMakeLists.txt  FrmwkPlugin.cpp  FrmwkPlugin.h  FrmwkPlugintest.html  npfdemo.def  npfdemo.rc
NPAPI/npscriptdemo/: CMakeLists.txt  Plugin.cpp  Plugin.h  npscriptdemo_test.html
